reversed list of links

--- a/splash portal/index.html
+++ b/splash portal/index.html
@@ -28,23 +28,23 @@
           <h2> DES117 Labs </h2>
           <section>
             <ul>
-                <li><a class="nav" href="artisan/artisan.html">Artisan</a></li>
-                <li><a class="nav" href="chevrolet/index.html">Chevrolet Lab</a></li>
-                <li><a class="nav" href="newman-jake-zenGarden/index.html">Zen Garden</a></li>
-                <li><a class="nav" href="flowershop/flowershop.html">Flowershop</a></li>
-                <li><a class="nav" href="codepen.html">Codepen Labs</a></li>
-                <li><a class="nav" href="faves/index.html">Favorite Things</a></li>
-                <li><a class="nav" href="coffeeshop/index.html">CoffeeShop</a></li>
-                <li><a class="nav" href="FavoriteThings2/FavoriteThings2.html">More Favorite Things</a></li>
+                <li><a class="nav" href="#">Treble Music</a></li>
                 <li><a class="nav" href="nwmn-one-bag/index.html">Just One Bag</a></li>
-
+                <li><a class="nav" href="coffeeshop/index.html">CoffeeShop</a></li>
+                <li><a class="nav" href="flowershop/flowershop.html">Flowershop</a></li>
+                <li><a class="nav" href="faves/index.html">Favorite Things</a></li>
+                <li><a class="nav" href="FavoriteThings2/FavoriteThings2.html">More Favorite Things</a></li>
+                <li><a class="nav" href="#">Even More Favorite Things</a></li>
+                <li><a class="nav" href="newman-jake-zenGarden/index.html">Zen Garden</a></li>
+                <li><a class="nav" href="codepen.html">Codepen Labs</a></li>
+                <li><a class="nav" href="chevrolet/index.html">Chevrolet Lab</a></li>
+                <li><a class="nav" href="artisan/artisan.html">Artisan</a></li>
             </ul>
           </section>
         </nav>
-        </ul>
     </main>
     <footer>
-        <h6> Send me <a href="mailto:jknewman@ucdavis.edu"> an email !</a> </h6>
+        <h6> Send me <a href="mailto:jknewman@ucdavis.edu">an email</a> or check out my <a href="https://github.com/nwmn/DES117">GitHub</a> !</h6>
     </footer>
   </div>
 </body>
