--- a/splash portal/index.html
+++ b/splash portal/index.html
@@ -27,13 +27,13 @@
           <h2> DES117 Labs </h2>
           <section>
             <ul>
-                <li><a class="nav" href="nwmn-treble">Treble Music</a></li>
+                <li><a class="nav" href="#nwmn-treble">Treble Music</a></li>
                 <li><a class="nav" href="nwmn-one-bag/index.html">Just One Bag</a></li>
                 <li><a class="nav" href="coffeeshop/index.html">CoffeeShop</a></li>
                 <li><a class="nav" href="flowershop/flowershop.html">Flowershop</a></li>
                 <li><a class="nav" href="faves/index.html">Favorite Things</a></li>
                 <li><a class="nav" href="FavoriteThings2/FavoriteThings2.html">More Favorites</a></li>
-                <li><a class="nav" href="yetMoreFaves/index.html">Yet, More Favorites</a></li>
+                <li><a class="nav" href="#yetMoreFaves/index.html">Yet, More Favorites</a></li>
                 <li><a class="nav" href="newman-jake-zenGarden/index.html">Zen Garden</a></li>
                 <li><a class="nav" href="codepen.html">Codepen Labs</a></li>
                 <li><a class="nav" href="chevrolet/index.html">Chevrolet Lab</a></li>
