finalized type, #about section box model

--- a/Treble-updated/index.html
+++ b/Treble-updated/index.html
@@ -19,7 +19,7 @@
 
       <div class="row">
         <section id="tagline">
-          <h2>Trendsetters of the Music Scene</h2>
+          <h2>Trendsetters in Music Since Day One</h2>
         </section>
       </div>
     </header>
@@ -46,12 +46,9 @@
       </div>
       <div class="row">
         <section id="about" class="col-12 column">
-          <p>
-            Led by a talented team of writers and photographers, Treble delivers an international readership the best of cutting-edge independent music through a uniquely West Coast lens. </p>
+          <p>Led by a talented team of writers and photographers, Treble delivers an international readership the best of cutting-edge independent music through a uniquely West Coast lens.</p>
 
-          <p>
-            The site has been repeatedly recognized as a top site for information about new, cool and independent music. We also offers monthly previews of upcoming concerts as well as thematic mixtapes highlighting emerging trends in music.
-          </p>
+          <p>The site has been repeatedly recognized as a top site for information about new, cool and independent music. We also offers monthly previews of upcoming concerts as well as thematic mixtapes highlighting emerging trends in music.</p>
         </section>
       </div>
 
