added social media links

--- a/Treble-updated/index.html
+++ b/Treble-updated/index.html
@@ -75,13 +75,11 @@
 
       <div class="row">
         <section id="social-media" class="col-4 column">
-          <img src="files/social-facebook.png" alt="facebook" />
-          <img src="files/social-pinterest.png" alt="pinterest" />
-          <img src="files/social-tumblr.png" alt="tumblr" />
-          <img src="files/social-twitter.png" alt="twitter" />
+          <a class ="none" href="https://www.facebook.com/"><img src="files/social-facebook.png" alt="facebook" /></a>
+          <a class ="none" href="https://www.pinterest.com/"><img src="files/social-pinterest.png" alt="pinterest" /></a>
+          <a class ="none" href="https://www.tumblr.com/"><img src="files/social-tumblr.png" alt="tumblr" />
+          <a class ="none" href="https://www.twitter.com/"><img src="files/social-twitter.png" alt="twitter" /></a>
           <img src="files/social-rss.png" alt="rss" />
-
-
         </section>
         <section id="legal" class="col-4 column">
           <p>
