--- a/codepens/codepen.html
+++ b/codepens/codepen.html
@@ -50,6 +50,16 @@
       <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
     </section>
     <br />
+
+    <section>
+
+    <p data-height="450" data-theme-id="0" data-slug-hash="LLYMVr" data-default-tab="css,result" data-user="nwmn" data-embed-version="2" data-pen-title="CSS-Reset-Code" class="codepen">See the Pen <a href="https://codepen.io/nwmn/pen/LLYMVr/">CSS-Reset-Code</a> by Jake Newman (<a href="https://codepen.io/nwmn">@nwmn</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+    <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+
+    </section>
+
+    <br />
+
     <section>
       <p data-height="450" data-theme-id="0" data-slug-hash="VbPLwV" data-default-tab="html,result" data-user="nwmn" data-embed-version="2" data-pen-title="In Class Lab: Pseudo Classes, Multiple Selectors" class="codepen">See the Pen <a href="http://codepen.io/nwmn/pen/VbPLwV/">In Class Lab: Pseudo Classes, Multiple Selectors</a> by Jake Newman (<a href="http://codepen.io/nwmn">@nwmn</a>) on <a href="http://codepen.io">CodePen</a>.</p>
       <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
@@ -78,6 +88,12 @@
 
     <br />
 
+    <section>
+    <p data-height="450" data-theme-id="0" data-slug-hash="GERPJL" data-default-tab="html,result" data-user="nwmn" data-embed-version="2" data-pen-title="In-Class-Lab: Layout" class="codepen">See the Pen <a href="https://codepen.io/nwmn/pen/GERPJL/">In-Class-Lab: Layout</a> by Jake Newman (<a href="https://codepen.io/nwmn">@nwmn</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+    <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+    </section>
+
+    <br  />
 
     <section>
       <p data-height="450" data-theme-id="0" data-slug-hash="ybxXVa" data-default-tab="html,result" data-user="nwmn" data-embed-version="2" data-pen-title="In Class Lab: Responsive" class="codepen">See the Pen <a href="http://codepen.io/nwmn/pen/ybxXVa/">In Class Lab: Responsive</a> by Jake Newman (<a href="http://codepen.io/nwmn">@nwmn</a>) on <a href="http://codepen.io">CodePen</a>.</p>
