--- a/splash portal/index.html
+++ b/splash portal/index.html
@@ -27,15 +27,15 @@
           <h2> DES117 Labs </h2>
           <section>
             <ul>
-                <li><a class="nav" href="#nwmn-treble">Treble Music</a></li>
+                <li><a class="nav" href="codepen.html">Codepens</a></li>
+                <li><a class="nav" href="nwmn-treble">Treble Music</a></li>
                 <li><a class="nav" href="nwmn-one-bag/index.html">Just One Bag</a></li>
+                <li><a class="nav" href="faves/index.html">Favorite Things</a></li>
+                <li><a class="nav" href="FavoriteThings2/FavoriteThings2.html">Favorite Things 2</a></li>
+                <li><a class="nav" href="yetMoreFaves/index.html">Favorite Things 3</a></li>
                 <li><a class="nav" href="coffeeshop/index.html">CoffeeShop</a></li>
                 <li><a class="nav" href="flowershop/flowershop.html">Flowershop</a></li>
-                <li><a class="nav" href="faves/index.html">Favorite Things</a></li>
-                <li><a class="nav" href="FavoriteThings2/FavoriteThings2.html">More Favorites</a></li>
-                <li><a class="nav" href="#yetMoreFaves/index.html">Yet, More Favorites</a></li>
                 <li><a class="nav" href="newman-jake-zenGarden/index.html">Zen Garden</a></li>
-                <li><a class="nav" href="codepen.html">Codepen Labs</a></li>
                 <li><a class="nav" href="chevrolet/index.html">Chevrolet Lab</a></li>
                 <li><a class="nav" href="artisan/artisan.html">Artisan Lab</a></li>
             </ul>
@@ -43,7 +43,7 @@
         </nav>
     </main>
     <footer>
-        <h6> Send me <a href="mailto:jknewman@ucdavis.edu">an email</a> or check out my <a href="https://github.com/nwmn/DES117">GitHub</a> !</h6>
+        <h6> Send me <a href="mailto:jknewman@ucdavis.edu">an email</a> or check out my <a href="https://github.com/nwmn">GitHub</a> !</h6>
     </footer>
   </div>
 </body>
