added background colors and typeface

--- a/final/index.html
+++ b/final/index.html
@@ -12,7 +12,9 @@
     </section>
 
     <section id="splash">
-
+      <p>Jake Newman</p>
+      <img class="small" src="images/ucd.png" alt="UC Davis" />
+      <p class="smalltext">Department of Design</p>
     </section>
 
     <section id="bio">
@@ -23,7 +25,7 @@
       </div>
 
       <div class="col-9 column">
-        <p> I'm a second year undergraduate living in Northern California. My time is spent between San Francisco and Davis for school. Primarily, I'm an aspiring web developer fascinated with software development, product creation, and related industrial processes. Outside of classtime, I work as a tutor for lower division computer science at the UC Davis Student Academic Success Center. On my own time, I enjoy volunteering at the LGBTQIA Resource Center and being an active community organizer.
+        <p class="para"> I'm a second year undergraduate living in Northern California. My time is spent between San Francisco and Davis for school. Ultimately, becoming a web experience designer is a major career goal of mine. I am fascinated with software development, product creation, and related industrial processes. Outside of class, I work as a tutor for lower division computer science at the UC Davis Student Academic Success Center in Dutton Hall. On my own time, I enjoy volunteering at the LGBTQIA Resource Center.
         </p>
       </div>
     </div>
