--- a/final/index.html
+++ b/final/index.html
@@ -24,8 +24,8 @@
         <p class="about">About Me</p>
       </div>
 
-      <div class="col-9 column">
-        <p class="para"> I'm a second year undergraduate living in Northern California. My time is spent between San Francisco and Davis for school. Ultimately, becoming a web experience designer is a major career goal of mine. I am fascinated with software development, product creation, and related industrial processes. Outside of class, I work as a tutor for lower division computer science at the UC Davis Student Academic Success Center in Dutton Hall. On my own time, I enjoy volunteering at the LGBTQIA Resource Center.
+      <div class="col-8 column">
+        <p class="para"> I'm a second year undergraduate living in Northern California. My time is spent between San Francisco and Davis for school. Ultimately, becoming a web experience designer is a major career goal of mine. I am fascinated with software development, product creation, and related industrial processes. Outside of class, I serve on an Ex-Officio Commission of ASUCD. In the past, I've also worked as a tutor for lower division computer science at the Student Academic Success Center in Dutton Hall. With my spare time, I enjoy volunteering at the LGBTQIA Resource Center and building websites for student organizations.
         </p>
       </div>
     </div>
@@ -37,6 +37,53 @@
   <!-- Gallery -->
 
   <main>
+    <section class="container">
+
+      <h2>Portfolio Gallery</h2>
+
+    <section class="row">
+      <section class="col-4 column book">
+
+      </section>
+
+      <section class="col-4 column flag">
+
+
+      </section>
+
+      <section class="col-4 column print">
+
+      </section>
+
+      <section class="col-4 column memorial">
+
+
+      </section>
+
+    </section>
+
+    <section class="row">
+      <section class="col-4 column type">
+
+
+      </section>
+
+      <section class="col-4 column kj">
+
+
+      </section>
+
+      <section class="col-4 column flags">
+
+
+      </section>
+
+      <section class="col-4 column vectors">
+
+      </section>
+
+    </section>
+  </section>
 
   </main>
 
